<resources>
    <string name="app_name">Training</string>
    <string name="action_settings">Settings</string>
    <string name="main_titlelist">Hello there, this is my list</string>

    <string name="drawer_title_1">First Item</string>
    <string name="drawer_title_2">Second Item</string>
    <string name="drawer_title_3">Third Item</string>
    <string name="drawer_title_4">Almost Last Item</string>
    <string name="drawer_title_5">Last Item</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_title">Greetings!</string>
</resources>
